force-app/main/default/objects/Opportunity/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <description>For Scale</description>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ML - D&amp;O</fullName>
            </value>
            <value>
                <fullName>ML - D&amp;O, EPL</fullName>
            </value>
            <value>
                <fullName>ML - D&amp;O, EPL, FID</fullName>
            </value>
            <value>
                <fullName>ML - D&amp;O, FID</fullName>
            </value>
            <value>
                <fullName>ML - Excess D&amp;O</fullName>
                <label>ML - Excess</label>
            </value>
            <value>
                <fullName>E&amp;O</fullName>
            </value>
            <value>
                <fullName>CFI</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <label>Influencer - Individual</label>
            </value>
            <value>
                <fullName>Influencer - Agency</fullName>
            </value>
            <value>
                <fullName>Influencer - Media</fullName>
            </value>
            <value>
                <fullName>Fleet Shield</fullName>
            </value>
            <value>
                <fullName>ML - EPL</fullName>
            </value>
            <value>
                <fullName>FMP M&amp;PL</fullName>
            </value>
            <value>
                <fullName>FMP M&amp;PL, EPL</fullName>
            </value>
            <value>
                <fullName>FMP M&amp;PL, FID</fullName>
            </value>
            <value>
                <fullName>FMP M&amp;PL, EPL, FID</fullName>
            </value>
            <value>
                <fullName>Public D&amp;O</fullName>
            </value>
            <value>
                <fullName>Lead Side A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>