force-app/main/default/objects/Opportunity/fields/Coverages_TEXT_255__c.field-meta.xml
<CustomField>
    <fullName>Coverages_TEXT_255__c</fullName>
    <description>Cannot use formulas on a Long Text Area, therefore a workflow copies the first 225 chars from the Coverages__c field as a hack to use in a formula</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverages TEXT 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>