force-app/main/default/objects/Opportunity/fields/Create_Policy__c.field-meta.xml
<CustomField>
    <fullName>Create_Policy__c</fullName>
    <formula>if ( 
 Number_of_Policies__c = 0
&amp;&amp; RecordTypeId == &quot;01237000000AXl3&quot;
&amp;&amp; RecordTypeId == &quot;01237000000AaEN&quot;
&amp;&amp; ISPICKVAL( StageName , &quot;Proposal Approved/Closed Won&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Policy</label>
    <type>Checkbox</type>
</CustomField>