force-app/main/default/objects/Opportunity/fields/CSB__c.field-meta.xml
<CustomField>
    <fullName>CSB__c</fullName>
    <formula>Owner.Profile.Name = &quot;CSB&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSB</label>
    <type>Checkbox</type>
</CustomField>