force-app/main/default/objects/Opportunity/fields/Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Current_Assets__c</fullName>
    <description>Scale record type</description>
    <label>Current Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>