force-app/main/default/objects/Opportunity/fields/Current_Client__c.field-meta.xml
<CustomField>
    <fullName>Current_Client__c</fullName>
    <formula>Account.Current_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Client</label>
    <type>Checkbox</type>
</CustomField>