force-app/main/default/objects/Opportunity/fields/Current_Policy_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Policy_Price__c</fullName>
    <label>Current Policy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>