force-app/main/default/objects/Opportunity/fields/D_O_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>D_O_Rated_Premium__c</fullName>
    <description>Used for Scale</description>
    <label>D&amp;O Rated Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>