force-app/main/default/objects/Opportunity/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>