force-app/main/default/objects/Opportunity/fields/Date_Submitted_Checked__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Submitted Checked</label>
    <type>Checkbox</type>
</CustomField>