force-app/main/default/objects/Opportunity/fields/Days_from_presented_on_hold__c.field-meta.xml
<CustomField>
    <fullName>Days_from_presented_on_hold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used by stale opportunity flows to automatically implement logic on the opportunity itself and related quote records.</description>
    <inlineHelpText>The number represents the days the Opportunity has been in the &quot;Proposal Presented&quot; or &quot;On Hold&quot;.</inlineHelpText>
    <label>Days from presented/on hold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>