force-app/main/default/objects/Opportunity/fields/Days_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Last_Modified__c</fullName>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Last Modified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>