force-app/main/default/objects/Opportunity/fields/Days_Presented_Before_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Presented_Before_Effective_Date__c</fullName>
    <label>Days Presented Before Effective Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>