force-app/main/default/objects/Opportunity/fields/Days_Quoted_Before_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Quoted_Before_Effective_Date__c</fullName>
    <description>This field calculates the days in between the Quoted Date and the effective date of an opportunity. If the quoted date field is blank, the field will display -1.</description>
    <formula>IF(ISNULL(Quoted_Date__c), -1, Effective_Date__c - DATEVALUE(Quoted_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the days in between the Quoted Date and the effective date of an opportunity. If the quoted date field is blank, the field will display -1.</inlineHelpText>
    <label>Days Quoted Before Effective Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>