force-app/main/default/objects/Opportunity/fields/Days_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Created__c</fullName>
    <description>SF-1280</description>
    <formula>TODAY()-DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>