force-app/main/default/objects/Opportunity/fields/Days_To_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Quoted__c</fullName>
    <label>Days To Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>