force-app/main/default/objects/Opportunity/fields/Days_To_Quoted_MB__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Quoted_MB__c</fullName>
    <label>Days To Quoted (move back)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>