force-app/main/default/objects/Opportunity/fields/Days_Until_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Renewal__c</fullName>
    <formula>IF( 
OR( 
ISPICKVAL(Policy_Type_Status__c, &quot;Renewal&quot;), 
ISPICKVAL(Policy_Type_Status__c, &quot;Remarketed at Renewal&quot;) ), 
Effective_Date__c - TODAY(),0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>