force-app/main/default/objects/Opportunity/fields/Declination_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Declination_Reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Declination Reasons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>