force-app/main/default/objects/Opportunity/fields/Declinations2__c.field-meta.xml
<CustomField>
    <fullName>Declinations2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List the insurers that declined.</inlineHelpText>
    <label>Declinations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>