force-app/main/default/objects/Opportunity/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <description>Stage updated to Declined</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Declined Date</label>
    <type>DateTime</type>
</CustomField>