force-app/main/default/objects/Opportunity/fields/Directors_and_Officers_Notes__c.field-meta.xml
<CustomField>
    <fullName>Directors_and_Officers_Notes__c</fullName>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>D&amp;O Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>