force-app/main/default/objects/Opportunity/fields/Do_not_send_reachout__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_reachout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not send reachout</label>
    <type>Checkbox</type>
</CustomField>