force-app/main/default/objects/Opportunity/fields/Dont_send_email__c.field-meta.xml
<CustomField>
    <fullName>Dont_send_email__c</fullName>
    <formula>Account.Dont_send_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dont send email</label>
    <type>Checkbox</type>
</CustomField>