force-app/main/default/objects/Opportunity/fields/Dont_Send_Email_Warning__c.field-meta.xml
<CustomField>
    <fullName>Dont_Send_Email_Warning__c</fullName>
    <description>Used in PopUp component on Opportunity Lightning Page - NB/AR to issue warning.</description>
    <formula>AND(
ISPICKVAL(Policy_Type_Status__c, &quot;New Business&quot;),
ISPICKVAL(StageName, &quot;Need Info From Client&quot;),
Record_Type__c = &quot;Founder Shield&quot;,
Dont_send_email__c = false,
Account.Current_Client__c = false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dont Send Email Warning</label>
    <type>Checkbox</type>
</CustomField>