force-app/main/default/objects/Opportunity/fields/Downtime_Processed__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downtime Processed</label>
    <type>Checkbox</type>
</CustomField>