force-app/main/default/objects/Opportunity/fields/E_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>E_Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If box is checked value on Policy is YES, if box is not checked value is NO or has not been populated.</inlineHelpText>
    <label>E-Consent Received</label>
    <type>Checkbox</type>
</CustomField>