force-app/main/default/objects/Opportunity/fields/Employment_Liability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employment_Liability_Notes__c</fullName>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employment Liability Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>