force-app/main/default/objects/Opportunity/fields/EPLI_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Rated_Premium__c</fullName>
    <description>Used for Scale</description>
    <label>EPLI Rated Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>