force-app/main/default/objects/Opportunity/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <description>Scale record type</description>
    <label>Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>