force-app/main/default/objects/Opportunity/fields/Excess_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Excess_Endorsements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Excess Endorsements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>