force-app/main/default/objects/Opportunity/fields/Existing_Policy_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Existing_Policy_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Policy Uploaded</label>
    <type>Checkbox</type>
</CustomField>