force-app/main/default/objects/Opportunity/fields/Expiring_FS_Fees__c.field-meta.xml
<CustomField>
    <fullName>Expiring_FS_Fees__c</fullName>
    <formula>Origin_Policy__r.FS_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring FS Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>