force-app/main/default/objects/Opportunity/fields/Expiring_Info__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Info__c</fullName>
    <formula>&quot;Total Assets: &quot; + Text(Origin_Policy__r.Opportunity__r.Total_Assets__c)&amp;BR()&amp;
&quot;# of Employees: &quot; + Text(Origin_Policy__r.Opportunity__r.Number_of_Employees__c)&amp;BR()&amp;
&quot;Plan Assets: &quot; + Text(Origin_Policy__r.Opportunity__r.Plan_Assets__c)&amp;BR()&amp;
&quot;Total Revenues (TTM): &quot; + Text(Origin_Policy__r.Opportunity__r.Revenues__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring Info</label>
    <type>Text</type>
</CustomField>