force-app/main/default/objects/Opportunity/fields/Expiring_Premium__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Premium__c</fullName>
    <label>Expiring Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>