force-app/main/default/objects/Opportunity/fields/Expiring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Revenue__c</fullName>
    <formula>Origin_Policy__r.Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>