force-app/main/default/objects/Opportunity/fields/Fiduciary_Coverages_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Coverages_Notes__c</fullName>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiduciary Coverages Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>