force-app/main/default/objects/Opportunity/fields/Filing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Filing_Fee__c</fullName>
    <label>Filing Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>