force-app/main/default/objects/Opportunity/fields/Flood_Insurance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Flood_Insurance_Requirement__c</fullName>
    <label>Flood Insurance Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>