force-app/main/default/objects/Opportunity/fields/Follow_form__c.field-meta.xml
<CustomField>
    <fullName>Follow_form__c</fullName>
    <label>Follow form?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>