force-app/main/default/objects/Opportunity/fields/Founder_Shield_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Founder_Shield_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Scale</description>
    <label>Founder Shield Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scale Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>