force-app/main/default/objects/Opportunity/fields/Front_Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Front_Conversation_ID__c</fullName>
    <description>A Unique ID from the Front Email System that will be used to tie the opportunity to the corresponding email system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Front Conversation ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>