force-app/main/default/objects/Opportunity/fields/FS_Fees__c.field-meta.xml
<CustomField>
    <fullName>FS_Fees__c</fullName>
    <label>FS Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>