force-app/main/default/objects/Opportunity/fields/FS_Marketer__c.field-meta.xml
<CustomField>
    <fullName>FS_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FS employee that is working on quoting the opportunity</description>
    <label>FS Marketer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Founder Shield</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (FS Marketer)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>